# mapof-roommates

./: README.md  pyproject.toml  requirements.txt
.github/workflows/: pypi-publish.yml  python-tests.yml  test-pypi-publish.yml
docs/: citation.html  genindex.html  index.html  installation.html  objects.inv  py-modindex.html  quickstart.html  search.html  searchindex.js
docs-source/source/: citation.rst  conf.py  index.rst  quickstart.rst
docs-source/source/objects/: RoommatesFamily.rst
docs/.doctrees/: citation.doctree  environment.pickle  index.doctree  installation.doctree  quickstart.doctree
docs/.doctrees/objects/: Roommates.doctree  RoommatesExperiment.doctree  RoommatesFamily.doctree  index.doctree
docs/.doctrees/persistence/: index.doctree  instance_exports.doctree  instance_imports.doctree
docs/.doctrees/reference/: index.doctree
docs/.doctrees/references/: index.doctree
docs/_modules/: index.html
docs/_sources/: citation.rst  installation.rst  quickstart.rst
docs/_sources/persistence/: index.rst
docs/objects/: RoommatesExperiment.html  RoommatesFamily.html
docs/persistence/: index.html  instance_imports.html
docs/reference/: index.html
docs/reference/cultures/: euclidean.html  impartial.html  index.html  list_of_cultures.html  main.html  mallows.html  urn.html
docs/reference/distances/: fast_distances.html  index.html  list_of_distances.html  main.html  main_distances.html
docs/references/: index.html
mapof-roommates/docs/: .buildinfo  genindex.html
tests/func_tests/: roommates_features_test.py
(+188 files in other folders)
